MySql : add prop useSSL false